# python_dependency_graph

./: .gitignore  LICENSE.txt  README.md  file_to_trace.py  pyproject.toml  requirements.txt  trace_imports.py
example_production/stuff/: calcs.py
flask_app/: app.py
flask_app/static/css/: styles.css
flask_app/static/js/: script.js  simulate_graph.js
flask_app/templates/: force_graph.html
src/depgraph/: main.py
src/depgraph/static/js/: simulate_graph.js
src/depgraphviz/: main.py  trace_imports.py
src/depgraphviz/static/css/: styles.css
src/depgraphviz/static/js/: simulate_graph.js
src/depgraphviz/templates/: force_graph.html
src/depmap/: app.py  main.py  trace_imports.py
src/depmap/templates/: force_graph.html
